--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "postinstall": "prisma generate",
+    "postinstall": "prisma generate || true",
     "server": "tsx server/src/app.ts",
     "server:dev": "tsx watch server/src/app.ts",
     "db:push": "prisma db push",
