--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^6.15.0",
     "browser-image-compression": "^2.0.2",
     "crypto-js": "^4.2.0",
+    "jsonwebtoken": "^9.0.3",
     "jwt-decode": "^4.0.0",
     "next": "15.5.9",
     "next-auth": "^4.24.11",
